# launcher

./: .eslintignore  .eslintrc.json  .gitignore  .gitmodules  .swcrc  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOALS.md  Jenkinsfile  LICENSE  README.md  TODO.md  crowdin.yml  eslint.config.mjs  gulpfile.extensions.js  gulpfile.js  gulpfile.util.js  index.html  jest.config.js  jest.config.ts  lefthook.yml  ormconfig.json  package-lock.json  package.json  postinstall.mjs  qodana.sarif.json  qodana.yaml  rsbuild.config.ts  secrets.json.example  sitemap.xml  swcrc.back.dev.json  swcrc.back.json  swcrc.back.prod.json  tempfile  tsconfig-main.json  tsconfig-renderer.json  tsconfig.backend.json  tsconfig.json  (+4 more)
.circleci/: config.yml
.devcontainer/: devcontainer.json
bench/: 1k_rand.txt
crates/fp-rust/: Cargo.toml
crates/fp-rust/src/: lib.rs
docs/: credits.html  credits.md  extensions.md  introduction.html  introduction.md  meta_edits.md  middleware.html  middleware.md  overview.html  overview.md  services.md
extensions/: package.json
icons/: icon.icns
lang/: ach-UG.json  af-ZA.json  ar-SA.json  ca-ES.json  cs-CZ.json  cs.json  da-DK.json  da.json  de-DE.json  de.json  el-GR.json  en-PT.json  en.json  eo-UY.json  es-ES.json  es.json  et-EE.json  fi-FI.json  fil-PH.json  fr-FR.json  fr.json  ga-IE.json  gb.json  he-IL.json  he.json  hr-HR.json  hu-HU.json  hy-AM.json  it-IT.json  it.json  ja-JP.json  ko-KR.json  mk-MK.json  nl-NL.json  nl.json  no-NO.json  pl-PL.json  pl.json  pt-BR.json  pt-PT.json  (+19 more)
public/: Library Thingie.lnk
static/: index.html
(+863 files in other folders)
