[package]
name = "fp-rust"
version = "0.1.0"
license = "MIT"
edition = "2018"
exclude = ["fp-rust.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6", "promise-api", "channel-api"]
